--- a/components/button.module.scss
+++ b/components/button.module.scss
@@ -14,6 +14,10 @@
 	transition: .2s ease-in-out;
 	width: 100%;
 
+	&:hover {
+		background: rgb(196, 196, 196)
+	}
+
 	@media (min-width: 650px) {
 		width: auto;
 		margin-right: .5rem;
