--- a/components/section.module.scss
+++ b/components/section.module.scss
@@ -1,9 +1,14 @@
 .section {
-	color: rgba(255,255,255,.8);
-	line-height: 1.5;
+	color: rgba(255,255,255,.9);
+	font-size: 14px;
+	line-height: 1.75;
 	max-width: 900px;
 	margin: 0 auto;
 	padding: 0 2rem 1rem;
+
+	p {
+		margin-bottom: 1.5rem;
+	}
 
 	&:last-child {
 		padding-bottom: 5rem;
