--- a/components/hero.module.scss
+++ b/components/hero.module.scss
@@ -11,6 +11,7 @@
 	background-position: center;
 }
 
+.bg-home 							{ background-image: url("/hero/home.jpeg"); }
 .bg-7wonders 					{ background-image: url("/hero/7-wonders.jpeg"); }
 .bg-awkwardGuests 		{ background-image: url("/hero/awkward-guests.webp"); }
 .bg-barenpark 				{ background-image: url("/hero/barenpark.jpeg"); }
@@ -52,6 +53,7 @@
 	}
 }
 
+.avatar-home 							{ background-image: url("/hero/home.webp"); }
 .avatar-7wonders 					{ background-image: url("/avatar/7-wonders.webp"); }
 .avatar-awkwardGuests 		{ background-image: url("/avatar/awkward-guests.webp"); }
 .avatar-barenpark 				{ background-image: url("/avatar/barenpark.webp"); }
