Friends Scene It

--- a/components/thumbnailGrid.module.scss
+++ b/components/thumbnailGrid.module.scss
@@ -54,6 +54,7 @@
 .img-panAm 						{ background-image: url("/avatar/pan-am.webp"); }
 .img-parks						{ background-image: url("/avatar/parks.webp"); }
 .img-santaMonica 			{ background-image: url("/avatar/santa-monica.webp"); }
+.img-sceneItFriends 	{ background-image: url("/avatar/scene-it-friends.webp"); }
 .img-sushiGo 					{ background-image: url("/avatar/sushi-go.webp"); }
 .img-trickerion 			{ background-image: url("/avatar/trickerion.webp"); }
 .img-viticulture 			{ background-image: url("/avatar/viticulture.webp"); }
