--- a/components/hero.module.scss
+++ b/components/hero.module.scss
@@ -24,6 +24,7 @@
 .bg-panAm 						{ background-image: url("/hero/panam.jpeg"); }
 .bg-parks							{ background-image: url("/hero/parks.jpeg"); }
 .bg-santaMonica 			{ background-image: url("/hero/santa-monica.png"); }
+.bg-sceneItFriends 		{ background-image: url("/hero/scene-it-friends.jpeg"); }
 .bg-sushiGo 					{ background-image: url("/hero/sushi-go.jpeg"); }
 .bg-trickerion 				{ background-image: url("/hero/trickerion.jpeg"); }
 .bg-viticulture 			{ background-image: url("/hero/viticulture.jpeg"); }
@@ -66,6 +67,7 @@
 .avatar-panAm 						{ background-image: url("/avatar/pan-am.webp"); }
 .avatar-parks							{ background-image: url("/avatar/parks.webp"); }
 .avatar-santaMonica 			{ background-image: url("/avatar/santa-monica.webp"); }
+.avatar-sceneItFriends 		{ background-image: url("/avatar/scene-it-friends.webp"); }
 .avatar-sushiGo 					{ background-image: url("/avatar/sushi-go.webp"); }
 .avatar-trickerion 				{ background-image: url("/avatar/trickerion.webp"); }
 .avatar-viticulture 			{ background-image: url("/avatar/viticulture.webp"); }
