Risk Game of Thrones

--- a/components/hero.module.scss
+++ b/components/hero.module.scss
@@ -23,6 +23,7 @@
 .bg-outlive 					{ background-image: url("/hero/outlive.png"); }
 .bg-panAm 						{ background-image: url("/hero/panam.jpeg"); }
 .bg-parks							{ background-image: url("/hero/parks.jpeg"); }
+.bg-riskGameOfThrones { background-image: url("/hero/risk-game-of-thrones.jpeg"); }
 .bg-santaMonica 			{ background-image: url("/hero/santa-monica.png"); }
 .bg-sceneItFriends 		{ background-image: url("/hero/scene-it-friends.jpeg"); }
 .bg-sushiGo 					{ background-image: url("/hero/sushi-go.jpeg"); }
@@ -66,6 +67,7 @@
 .avatar-outlive 					{ background-image: url("/avatar/outlive.webp"); }
 .avatar-panAm 						{ background-image: url("/avatar/pan-am.webp"); }
 .avatar-parks							{ background-image: url("/avatar/parks.webp"); }
+.avatar-riskGameOfThrones { background-image: url("/avatar/risk-game-of-thrones.webp"); }
 .avatar-santaMonica 			{ background-image: url("/avatar/santa-monica.webp"); }
 .avatar-sceneItFriends 		{ background-image: url("/avatar/scene-it-friends.webp"); }
 .avatar-sushiGo 					{ background-image: url("/avatar/sushi-go.webp"); }
