--- a/components/thumbnailGrid.module.scss
+++ b/components/thumbnailGrid.module.scss
@@ -53,6 +53,7 @@
 .img-outlive 					{ background-image: url("/avatar/outlive.webp"); }
 .img-panAm 						{ background-image: url("/avatar/pan-am.webp"); }
 .img-parks						{ background-image: url("/avatar/parks.webp"); }
+.img-riskGameOfThrones{ background-image: url("/avatar/risk-game-of-thrones.webp"); }
 .img-santaMonica 			{ background-image: url("/avatar/santa-monica.webp"); }
 .img-sceneItFriends 	{ background-image: url("/avatar/scene-it-friends.webp"); }
 .img-sushiGo 					{ background-image: url("/avatar/sushi-go.webp"); }
