--- a/components/hero.module.scss
+++ b/components/hero.module.scss
@@ -16,6 +16,7 @@
 .bg-awkwardGuests 		{ background-image: url("/hero/awkward-guests.webp"); }
 .bg-barenpark 				{ background-image: url("/hero/barenpark.jpeg"); }
 .bg-brewcrafters 			{ background-image: url("/hero/brewcrafters.jpeg"); }
+.bg-clueDisney 				{ background-image: url("/hero/clue-disney.webp"); }
 .bg-dinosaurWorld 		{ background-image: url("/hero/dinosaur-world.webp"); }
 .bg-dixit 						{ background-image: url("/hero/dixit.jpeg"); }
 .bg-evolutionClimate	{ background-image: url("/hero/evolution-climate.png"); }
@@ -61,6 +62,7 @@
 .avatar-awkwardGuests 		{ background-image: url("/avatar/awkward-guests.webp"); }
 .avatar-barenpark 				{ background-image: url("/avatar/barenpark.webp"); }
 .avatar-brewcrafters 			{ background-image: url("/avatar/brewcrafters.webp"); }
+.avatar-clueDisney 				{ background-image: url("/avatar/clue-disney.webp"); }
 .avatar-dinosaurWorld 		{ background-image: url("/avatar/dinosaur-world.webp"); }
 .avatar-dixit 						{ background-image: url("/avatar/dixit.webp"); }
 .avatar-evolutionClimate	{ background-image: url("/avatar/evolution-climate.webp"); }
