--- a/components/thumbnailGrid.module.scss
+++ b/components/thumbnailGrid.module.scss
@@ -46,6 +46,7 @@
 .img-awkwardGuests 		{ background-image: url("/avatar/awkward-guests.webp"); }
 .img-barenpark 				{ background-image: url("/avatar/barenpark.webp"); }
 .img-brewcrafters 		{ background-image: url("/avatar/brewcrafters.webp"); }
+.img-clueDisney 			{ background-image: url("/avatar/clue-disney.webp"); }
 .img-dinosaurWorld 		{ background-image: url("/avatar/dinosaur-world.webp"); }
 .img-dixit 						{ background-image: url("/avatar/dixit.webp"); }
 .img-evolutionClimate	{ background-image: url("/avatar/evolution-climate.webp"); }
