Disney Scene It

--- a/components/hero.module.scss
+++ b/components/hero.module.scss
@@ -28,6 +28,7 @@
 .bg-riskGameOfThrones { background-image: url("/hero/risk-game-of-thrones.jpeg"); }
 .bg-santaMonica 			{ background-image: url("/hero/santa-monica.png"); }
 .bg-sceneItFriends 		{ background-image: url("/hero/scene-it-friends.jpeg"); }
+.bg-sceneItDisney 		{ background-image: url("/hero/scene-it-disney.webp"); }
 .bg-sushiGo 					{ background-image: url("/hero/sushi-go.jpeg"); }
 .bg-trickerion 				{ background-image: url("/hero/trickerion.jpeg"); }
 .bg-viticulture 			{ background-image: url("/hero/viticulture.jpeg"); }
@@ -73,6 +74,7 @@
 .avatar-parks							{ background-image: url("/avatar/parks.webp"); }
 .avatar-riskGameOfThrones { background-image: url("/avatar/risk-game-of-thrones.webp"); }
 .avatar-santaMonica 			{ background-image: url("/avatar/santa-monica.webp"); }
+.avatar-sceneItDisney 		{ background-image: url("/avatar/scene-it-disney.webp"); }
 .avatar-sceneItFriends 		{ background-image: url("/avatar/scene-it-friends.webp"); }
 .avatar-sushiGo 					{ background-image: url("/avatar/sushi-go.webp"); }
 .avatar-trickerion 				{ background-image: url("/avatar/trickerion.webp"); }
