--- a/components/thumbnailGrid.module.scss
+++ b/components/thumbnailGrid.module.scss
@@ -63,6 +63,7 @@
 .img-riskGameOfThrones{ background-image: url("/avatar/risk-game-of-thrones.webp"); }
 .img-santaMonica 			{ background-image: url("/avatar/santa-monica.webp"); }
 .img-sceneItFriends 	{ background-image: url("/avatar/scene-it-friends.webp"); }
+.img-sceneItDisney 		{ background-image: url("/avatar/scene-it-disney.webp"); }
 .img-sushiGo 					{ background-image: url("/avatar/sushi-go.webp"); }
 .img-trickerion 			{ background-image: url("/avatar/trickerion.webp"); }
 .img-viticulture 			{ background-image: url("/avatar/viticulture.webp"); }
