Catan and Scrabble

--- a/components/hero.module.scss
+++ b/components/hero.module.scss
@@ -16,6 +16,7 @@
 .bg-awkwardGuests 		{ background-image: url("/hero/awkward-guests.webp"); }
 .bg-barenpark 				{ background-image: url("/hero/barenpark.jpeg"); }
 .bg-brewcrafters 			{ background-image: url("/hero/brewcrafters.jpeg"); }
+.bg-catan 						{ background-image: url("/hero/catan.jpg"); }
 .bg-clueDisney 				{ background-image: url("/hero/clue-disney.webp"); }
 .bg-dinosaurWorld 		{ background-image: url("/hero/dinosaur-world.webp"); }
 .bg-dixit 						{ background-image: url("/hero/dixit.jpeg"); }
@@ -27,6 +28,7 @@
 .bg-parks							{ background-image: url("/hero/parks.jpeg"); }
 .bg-riskGameOfThrones { background-image: url("/hero/risk-game-of-thrones.jpeg"); }
 .bg-santaMonica 			{ background-image: url("/hero/santa-monica.png"); }
+.bg-scrabble 					{ background-image: url("/hero/scrabble.jpeg"); }
 .bg-sceneItFriends 		{ background-image: url("/hero/scene-it-friends.jpeg"); }
 .bg-sceneItDisney 		{ background-image: url("/hero/scene-it-disney.webp"); }
 .bg-sushiGo 					{ background-image: url("/hero/sushi-go.jpeg"); }
@@ -63,6 +65,7 @@
 .avatar-awkwardGuests 		{ background-image: url("/avatar/awkward-guests.webp"); }
 .avatar-barenpark 				{ background-image: url("/avatar/barenpark.webp"); }
 .avatar-brewcrafters 			{ background-image: url("/avatar/brewcrafters.webp"); }
+.avatar-catan 						{ background-image: url("/avatar/catan.webp"); }
 .avatar-clueDisney 				{ background-image: url("/avatar/clue-disney.webp"); }
 .avatar-dinosaurWorld 		{ background-image: url("/avatar/dinosaur-world.webp"); }
 .avatar-dixit 						{ background-image: url("/avatar/dixit.webp"); }
@@ -74,6 +77,7 @@
 .avatar-parks							{ background-image: url("/avatar/parks.webp"); }
 .avatar-riskGameOfThrones { background-image: url("/avatar/risk-game-of-thrones.webp"); }
 .avatar-santaMonica 			{ background-image: url("/avatar/santa-monica.webp"); }
+.avatar-scrabble 					{ background-image: url("/avatar/scrabble.webp"); }
 .avatar-sceneItDisney 		{ background-image: url("/avatar/scene-it-disney.webp"); }
 .avatar-sceneItFriends 		{ background-image: url("/avatar/scene-it-friends.webp"); }
 .avatar-sushiGo 					{ background-image: url("/avatar/sushi-go.webp"); }
