--- a/components/thumbnailGrid.module.scss
+++ b/components/thumbnailGrid.module.scss
@@ -51,6 +51,7 @@
 .img-awkwardGuests 		{ background-image: url("/avatar/awkward-guests.webp"); }
 .img-barenpark 				{ background-image: url("/avatar/barenpark.webp"); }
 .img-brewcrafters 		{ background-image: url("/avatar/brewcrafters.webp"); }
+.img-catan 						{ background-image: url("/avatar/catan.webp"); }
 .img-clueDisney 			{ background-image: url("/avatar/clue-disney.webp"); }
 .img-dinosaurWorld 		{ background-image: url("/avatar/dinosaur-world.webp"); }
 .img-dixit 						{ background-image: url("/avatar/dixit.webp"); }
@@ -62,6 +63,7 @@
 .img-parks						{ background-image: url("/avatar/parks.webp"); }
 .img-riskGameOfThrones{ background-image: url("/avatar/risk-game-of-thrones.webp"); }
 .img-santaMonica 			{ background-image: url("/avatar/santa-monica.webp"); }
+.img-scrabble 				{ background-image: url("/avatar/scrabble.webp"); }
 .img-sceneItFriends 	{ background-image: url("/avatar/scene-it-friends.webp"); }
 .img-sceneItDisney 		{ background-image: url("/avatar/scene-it-disney.webp"); }
 .img-sushiGo 					{ background-image: url("/avatar/sushi-go.webp"); }
