--- a/components/thumbnailGrid.module.scss
+++ b/components/thumbnailGrid.module.scss
@@ -56,6 +56,7 @@
 .img-dinosaurWorld 		{ background-image: url("/avatar/dinosaur-world.webp"); }
 .img-dixit 						{ background-image: url("/avatar/dixit.webp"); }
 .img-evolutionClimate	{ background-image: url("/avatar/evolution-climate.webp"); }
+.img-life							{ background-image: url("/avatar/life.webp"); }
 .img-monopolyDisney		{ background-image: url("/avatar/monopoly-disney.webp"); }
 .img-obsession 				{ background-image: url("/avatar/obsession.webp"); }
 .img-outlive 					{ background-image: url("/avatar/outlive.webp"); }
