--- a/components/hero.module.scss
+++ b/components/hero.module.scss
@@ -21,6 +21,7 @@
 .bg-dinosaurWorld 		{ background-image: url("/hero/dinosaur-world.webp"); }
 .bg-dixit 						{ background-image: url("/hero/dixit.jpeg"); }
 .bg-evolutionClimate	{ background-image: url("/hero/evolution-climate.png"); }
+.bg-life							{ background-image: url("/hero/life.webp"); }
 .bg-monopolyDisney		{ background-image: url("/hero/monopoly-disney.jpeg"); }
 .bg-obsession 				{ background-image: url("/hero/obsession.jpeg"); }
 .bg-outlive 					{ background-image: url("/hero/outlive.png"); }
@@ -70,6 +71,7 @@
 .avatar-dinosaurWorld 		{ background-image: url("/avatar/dinosaur-world.webp"); }
 .avatar-dixit 						{ background-image: url("/avatar/dixit.webp"); }
 .avatar-evolutionClimate	{ background-image: url("/avatar/evolution-climate.webp"); }
+.avatar-life							{ background-image: url("/avatar/life.webp"); }
 .avatar-monopolyDisney		{ background-image: url("/avatar/monopoly-disney.webp"); }
 .avatar-obsession 				{ background-image: url("/avatar/obsession.webp"); }
 .avatar-outlive 					{ background-image: url("/avatar/outlive.webp"); }
