Battleship, Pictionary, Spyweb

--- a/components/hero.module.scss
+++ b/components/hero.module.scss
@@ -15,6 +15,7 @@
 .bg-7wonders 					{ background-image: url("/hero/7-wonders.jpeg"); }
 .bg-awkwardGuests 		{ background-image: url("/hero/awkward-guests.webp"); }
 .bg-barenpark 				{ background-image: url("/hero/barenpark.jpeg"); }
+.bg-battleship 				{ background-image: url("/hero/battleship.webp"); }
 .bg-brewcrafters 			{ background-image: url("/hero/brewcrafters.jpeg"); }
 .bg-catan 						{ background-image: url("/hero/catan.jpg"); }
 .bg-clueDisney 				{ background-image: url("/hero/clue-disney.webp"); }
@@ -27,11 +28,13 @@
 .bg-outlive 					{ background-image: url("/hero/outlive.png"); }
 .bg-panAm 						{ background-image: url("/hero/panam.jpeg"); }
 .bg-parks							{ background-image: url("/hero/parks.jpeg"); }
+.bg-pictionary				{ background-image: url("/hero/pictionary.jpeg"); }
 .bg-riskGameOfThrones { background-image: url("/hero/risk-game-of-thrones.jpeg"); }
 .bg-santaMonica 			{ background-image: url("/hero/santa-monica.png"); }
 .bg-scrabble 					{ background-image: url("/hero/scrabble.jpeg"); }
 .bg-sceneItFriends 		{ background-image: url("/hero/scene-it-friends.jpeg"); }
 .bg-sceneItDisney 		{ background-image: url("/hero/scene-it-disney.webp"); }
+.bg-spyWeb	 					{ background-image: url("/hero/spy-web.webp"); }
 .bg-sushiGo 					{ background-image: url("/hero/sushi-go.jpeg"); }
 .bg-trickerion 				{ background-image: url("/hero/trickerion.jpeg"); }
 .bg-viticulture 			{ background-image: url("/hero/viticulture.jpeg"); }
@@ -65,6 +68,7 @@
 .avatar-7wonders 					{ background-image: url("/avatar/7-wonders.webp"); }
 .avatar-awkwardGuests 		{ background-image: url("/avatar/awkward-guests.webp"); }
 .avatar-barenpark 				{ background-image: url("/avatar/barenpark.webp"); }
+.avatar-battleship 				{ background-image: url("/avatar/battleship.webp"); }
 .avatar-brewcrafters 			{ background-image: url("/avatar/brewcrafters.webp"); }
 .avatar-catan 						{ background-image: url("/avatar/catan.webp"); }
 .avatar-clueDisney 				{ background-image: url("/avatar/clue-disney.webp"); }
@@ -77,11 +81,13 @@
 .avatar-outlive 					{ background-image: url("/avatar/outlive.webp"); }
 .avatar-panAm 						{ background-image: url("/avatar/pan-am.webp"); }
 .avatar-parks							{ background-image: url("/avatar/parks.webp"); }
+.avatar-pictionary				{ background-image: url("/avatar/pictionary.webp"); }
 .avatar-riskGameOfThrones { background-image: url("/avatar/risk-game-of-thrones.webp"); }
 .avatar-santaMonica 			{ background-image: url("/avatar/santa-monica.webp"); }
 .avatar-scrabble 					{ background-image: url("/avatar/scrabble.webp"); }
 .avatar-sceneItDisney 		{ background-image: url("/avatar/scene-it-disney.webp"); }
 .avatar-sceneItFriends 		{ background-image: url("/avatar/scene-it-friends.webp"); }
+.avatar-spyWeb	 					{ background-image: url("/avatar/spy-web.webp"); }
 .avatar-sushiGo 					{ background-image: url("/avatar/sushi-go.webp"); }
 .avatar-trickerion 				{ background-image: url("/avatar/trickerion.webp"); }
 .avatar-viticulture 			{ background-image: url("/avatar/viticulture.webp"); }
