--- a/components/thumbnailGrid.module.scss
+++ b/components/thumbnailGrid.module.scss
@@ -50,6 +50,7 @@
 .img-7wonders 				{ background-image: url("/avatar/7-wonders.webp"); }
 .img-awkwardGuests 		{ background-image: url("/avatar/awkward-guests.webp"); }
 .img-barenpark 				{ background-image: url("/avatar/barenpark.webp"); }
+.img-battleship		 		{ background-image: url("/avatar/battleship.webp"); }
 .img-brewcrafters 		{ background-image: url("/avatar/brewcrafters.webp"); }
 .img-catan 						{ background-image: url("/avatar/catan.webp"); }
 .img-clueDisney 			{ background-image: url("/avatar/clue-disney.webp"); }
@@ -61,12 +62,14 @@
 .img-obsession 				{ background-image: url("/avatar/obsession.webp"); }
 .img-outlive 					{ background-image: url("/avatar/outlive.webp"); }
 .img-panAm 						{ background-image: url("/avatar/pan-am.webp"); }
+.img-pictionary				{ background-image: url("/avatar/pictionary.webp"); }
 .img-parks						{ background-image: url("/avatar/parks.webp"); }
 .img-riskGameOfThrones{ background-image: url("/avatar/risk-game-of-thrones.webp"); }
 .img-santaMonica 			{ background-image: url("/avatar/santa-monica.webp"); }
 .img-scrabble 				{ background-image: url("/avatar/scrabble.webp"); }
 .img-sceneItFriends 	{ background-image: url("/avatar/scene-it-friends.webp"); }
 .img-sceneItDisney 		{ background-image: url("/avatar/scene-it-disney.webp"); }
+.img-spyWeb	 					{ background-image: url("/avatar/spy-web.webp"); }
 .img-sushiGo 					{ background-image: url("/avatar/sushi-go.webp"); }
 .img-trickerion 			{ background-image: url("/avatar/trickerion.webp"); }
 .img-viticulture 			{ background-image: url("/avatar/viticulture.webp"); }
