--- a/components/hero.module.scss
+++ b/components/hero.module.scss
@@ -29,6 +29,7 @@
 .bg-panAm 						{ background-image: url("/hero/panam.jpeg"); }
 .bg-parks							{ background-image: url("/hero/parks.jpeg"); }
 .bg-pictionary				{ background-image: url("/hero/pictionary.jpeg"); }
+.bg-risk							{ background-image: url("/hero/risk.jpeg"); }
 .bg-riskGameOfThrones { background-image: url("/hero/risk-game-of-thrones.jpeg"); }
 .bg-santaMonica 			{ background-image: url("/hero/santa-monica.png"); }
 .bg-scrabble 					{ background-image: url("/hero/scrabble.jpeg"); }
@@ -82,6 +83,7 @@
 .avatar-panAm 						{ background-image: url("/avatar/pan-am.webp"); }
 .avatar-parks							{ background-image: url("/avatar/parks.webp"); }
 .avatar-pictionary				{ background-image: url("/avatar/pictionary.webp"); }
+.avatar-risk							{ background-image: url("/avatar/risk.webp"); }
 .avatar-riskGameOfThrones { background-image: url("/avatar/risk-game-of-thrones.webp"); }
 .avatar-santaMonica 			{ background-image: url("/avatar/santa-monica.webp"); }
 .avatar-scrabble 					{ background-image: url("/avatar/scrabble.webp"); }
