--- a/components/thumbnailGrid.module.scss
+++ b/components/thumbnailGrid.module.scss
@@ -64,6 +64,7 @@
 .img-panAm 						{ background-image: url("/avatar/pan-am.webp"); }
 .img-pictionary				{ background-image: url("/avatar/pictionary.webp"); }
 .img-parks						{ background-image: url("/avatar/parks.webp"); }
+.img-risk							{ background-image: url("/avatar/risk.webp"); }
 .img-riskGameOfThrones{ background-image: url("/avatar/risk-game-of-thrones.webp"); }
 .img-santaMonica 			{ background-image: url("/avatar/santa-monica.webp"); }
 .img-scrabble 				{ background-image: url("/avatar/scrabble.webp"); }
