--- a/components/hero.module.scss
+++ b/components/hero.module.scss
@@ -18,6 +18,7 @@
 .bg-battleship 				{ background-image: url("/hero/battleship.webp"); }
 .bg-brewcrafters 			{ background-image: url("/hero/brewcrafters.jpeg"); }
 .bg-catan 						{ background-image: url("/hero/catan.jpg"); }
+.bg-clue 							{ background-image: url("/hero/clue.jpeg"); }
 .bg-clueDisney 				{ background-image: url("/hero/clue-disney.webp"); }
 .bg-dinosaurWorld 		{ background-image: url("/hero/dinosaur-world.webp"); }
 .bg-dixit 						{ background-image: url("/hero/dixit.jpeg"); }
@@ -72,6 +73,7 @@
 .avatar-battleship 				{ background-image: url("/avatar/battleship.webp"); }
 .avatar-brewcrafters 			{ background-image: url("/avatar/brewcrafters.webp"); }
 .avatar-catan 						{ background-image: url("/avatar/catan.webp"); }
+.avatar-clue 							{ background-image: url("/avatar/clue.webp"); }
 .avatar-clueDisney 				{ background-image: url("/avatar/clue-disney.webp"); }
 .avatar-dinosaurWorld 		{ background-image: url("/avatar/dinosaur-world.webp"); }
 .avatar-dixit 						{ background-image: url("/avatar/dixit.webp"); }
