--- a/components/thumbnailGrid.module.scss
+++ b/components/thumbnailGrid.module.scss
@@ -53,6 +53,7 @@
 .img-battleship		 		{ background-image: url("/avatar/battleship.webp"); }
 .img-brewcrafters 		{ background-image: url("/avatar/brewcrafters.webp"); }
 .img-catan 						{ background-image: url("/avatar/catan.webp"); }
+.img-clue 						{ background-image: url("/avatar/clue.webp"); }
 .img-clueDisney 			{ background-image: url("/avatar/clue-disney.webp"); }
 .img-dinosaurWorld 		{ background-image: url("/avatar/dinosaur-world.webp"); }
 .img-dixit 						{ background-image: url("/avatar/dixit.webp"); }
