--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -50,9 +50,13 @@ a {
 .bg-spy-web	 							{ background-image: url("/hero/spy-web.webp"); }
 .bg-sushi-go 							{ background-image: url("/hero/sushi-go.jpeg"); }
 .bg-trickerion 						{ background-image: url("/hero/trickerion.jpeg"); }
+.bg-trickerion-dahlgaards-academy { background-image: url("/hero/trickerion-dahlgaards-academy.jpeg"); }
+.bg-trickerion-dawn-of-technology { background-image: url("/hero/trickerion-dawn-of-technology.jpeg"); }
 .bg-viticulture 					{ background-image: url("/hero/viticulture.jpeg"); }
+.bg-viticulture-tuscany		{ background-image: url("/hero/viticulture-tuscany.jpeg"); }
 .bg-wingspan 							{ background-image: url("/hero/wingspan.jpeg"); }
 .bg-wingspan-oceania			{ background-image: url("/hero/wingspan-oceania.webp"); }
+.bg-wingspan-european			{ background-image: url("/hero/wingspan-european.jpeg"); }
 
 .avatar-home 							{ background-image: url("/hero/home.webp"); }
 .avatar-7-wonders 				{ background-image: url("/avatar/7-wonders.webp"); }
@@ -82,6 +86,10 @@ a {
 .avatar-spy-web	 					{ background-image: url("/avatar/spy-web.webp"); }
 .avatar-sushi-go 					{ background-image: url("/avatar/sushi-go.webp"); }
 .avatar-trickerion 				{ background-image: url("/avatar/trickerion.webp"); }
+.avatar-trickerion-dahlgaards-academy	{ background-image: url("/avatar/trickerion-dahlgaards-academy.webp"); }
+.avatar-trickerion-dawn-of-technology	{ background-image: url("/avatar/trickerion-dawn-of-technology.webp"); }
 .avatar-viticulture 			{ background-image: url("/avatar/viticulture.webp"); }
+.avatar-viticulture-tuscany	{ background-image: url("/avatar/viticulture-tuscany.webp"); }
 .avatar-wingspan 					{ background-image: url("/avatar/wingspan.webp"); }
 .avatar-wingspan-oceania	{ background-image: url("/avatar/wingspan-oceania.webp"); }
+.avatar-wingspan-european	{ background-image: url("/avatar/wingspan-european.webp"); }
