--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -40,6 +40,7 @@ a {
 .bg-outlive 							{ background-image: url("/hero/outlive.png"); }
 .bg-pan-am 								{ background-image: url("/hero/panam.jpeg"); }
 .bg-parks									{ background-image: url("/hero/parks.jpeg"); }
+.bg-parks-nightfall				{ background-image: url("/hero/parks-nightfall.jpeg"); }
 .bg-pictionary						{ background-image: url("/hero/pictionary.jpeg"); }
 .bg-risk									{ background-image: url("/hero/risk.jpeg"); }
 .bg-risk-game-of-thrones	{ background-image: url("/hero/risk-game-of-thrones.jpeg"); }
@@ -76,6 +77,7 @@ a {
 .avatar-outlive 					{ background-image: url("/avatar/outlive.webp"); }
 .avatar-pan-am 						{ background-image: url("/avatar/pan-am.webp"); }
 .avatar-parks							{ background-image: url("/avatar/parks.webp"); }
+.avatar-parks-nightfall		{ background-image: url("/avatar/parks-nightfall.webp"); }
 .avatar-pictionary				{ background-image: url("/avatar/pictionary.webp"); }
 .avatar-risk							{ background-image: url("/avatar/risk.webp"); }
 .avatar-risk-game-of-thrones { background-image: url("/avatar/risk-game-of-thrones.webp"); }
