--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -26,17 +26,22 @@ a {
 .bg-7-wonders 						{ background-image: url("/hero/7-wonders.jpeg"); }
 .bg-awkward-guests 				{ background-image: url("/hero/awkward-guests.webp"); }
 .bg-barenpark 						{ background-image: url("/hero/barenpark.jpeg"); }
+.bg-barenpark-bad-news-bears 	{ background-image: url("/hero/barenpark-bad-news-bears.webp"); }
 .bg-battleship 						{ background-image: url("/hero/battleship.webp"); }
 .bg-brew-crafters 				{ background-image: url("/hero/brewcrafters.jpeg"); }
 .bg-clue 									{ background-image: url("/hero/clue.jpeg"); }
 .bg-catan 								{ background-image: url("/hero/catan.jpg"); }
 .bg-clue-disney 					{ background-image: url("/hero/clue-disney.webp"); }
 .bg-dinosaur-world 				{ background-image: url("/hero/dinosaur-world.webp"); }
+.bg-dinosaur-world-hybrid	{ background-image: url("/hero/dinosaur-world-hybrid.webp"); }
+.bg-dinosaur-world-water	{ background-image: url("/hero/dinosaur-world-water.webp"); }
+.bg-dinosaur-world-ice-age	{ background-image: url("/hero/dinosaur-world-ice-age.webp"); }
 .bg-dixit 								{ background-image: url("/hero/dixit.jpeg"); }
 .bg-evolution-climate			{ background-image: url("/hero/evolution-climate.png"); }
 .bg-life									{ background-image: url("/hero/life.webp"); }
 .bg-monopoly-disney				{ background-image: url("/hero/monopoly-disney.jpeg"); }
 .bg-obsession 						{ background-image: url("/hero/obsession.jpeg"); }
+.bg-obsession-upstairs-downstairs	{ background-image: url("/hero/obsession-upstairs-downstairs.webp"); }
 .bg-outlive 							{ background-image: url("/hero/outlive.png"); }
 .bg-pan-am 								{ background-image: url("/hero/panam.jpeg"); }
 .bg-parks									{ background-image: url("/hero/parks.jpeg"); }
@@ -63,17 +68,22 @@ a {
 .avatar-7-wonders 				{ background-image: url("/avatar/7-wonders.webp"); }
 .avatar-awkward-guests 		{ background-image: url("/avatar/awkward-guests.webp"); }
 .avatar-barenpark 				{ background-image: url("/avatar/barenpark.webp"); }
+.avatar-barenpark-bad-news-bears { background-image: url("/avatar/barenpark-bad-news-bears.webp"); }
 .avatar-battleship 				{ background-image: url("/avatar/battleship.webp"); }
 .avatar-brew-crafters 		{ background-image: url("/avatar/brewcrafters.webp"); }
 .avatar-catan 						{ background-image: url("/avatar/catan.webp"); }
 .avatar-clue 							{ background-image: url("/avatar/clue.webp"); }
 .avatar-clue-disney 			{ background-image: url("/avatar/clue-disney.webp"); }
 .avatar-dinosaur-world 		{ background-image: url("/avatar/dinosaur-world.webp"); }
+.avatar-dinosaur-world-hybrid { background-image: url("/avatar/dinosaur-world-hybrid.webp"); }
+.avatar-dinosaur-world-water { background-image: url("/avatar/dinosaur-world-water.webp"); }
+.avatar-dinosaur-world-ice-age	{ background-image: url("/avatar/dinosaur-world-ice-age.webp"); }
 .avatar-dixit 						{ background-image: url("/avatar/dixit.webp"); }
 .avatar-evolution-climate	{ background-image: url("/avatar/evolution-climate.webp"); }
 .avatar-life							{ background-image: url("/avatar/life.webp"); }
 .avatar-monopoly-disney		{ background-image: url("/avatar/monopoly-disney.webp"); }
 .avatar-obsession 				{ background-image: url("/avatar/obsession.webp"); }
+.avatar-obsession-upstairs-downstairs { background-image: url("/avatar/obsession-upstairs-downstairs.webp"); }
 .avatar-outlive 					{ background-image: url("/avatar/outlive.webp"); }
 .avatar-pan-am 						{ background-image: url("/avatar/pan-am.webp"); }
 .avatar-parks							{ background-image: url("/avatar/parks.webp"); }
