--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -37,6 +37,7 @@ a {
 .bg-dinosaur-world-water	{ background-image: url("/hero/dinosaur-world-water.webp"); }
 .bg-dinosaur-world-ice-age	{ background-image: url("/hero/dinosaur-world-ice-age.webp"); }
 .bg-dixit 								{ background-image: url("/hero/dixit.jpeg"); }
+.bg-dog-park 							{ background-image: url("/hero/dog-park.webp"); }
 .bg-evolution-climate			{ background-image: url("/hero/evolution-climate.png"); }
 .bg-life									{ background-image: url("/hero/life.webp"); }
 .bg-monopoly-disney				{ background-image: url("/hero/monopoly-disney.jpeg"); }
@@ -79,6 +80,7 @@ a {
 .avatar-dinosaur-world-water { background-image: url("/avatar/dinosaur-world-water.webp"); }
 .avatar-dinosaur-world-ice-age	{ background-image: url("/avatar/dinosaur-world-ice-age.webp"); }
 .avatar-dixit 						{ background-image: url("/avatar/dixit.webp"); }
+.avatar-dog-park 					{ background-image: url("/avatar/dog-park.webp"); }
 .avatar-evolution-climate	{ background-image: url("/avatar/evolution-climate.webp"); }
 .avatar-life							{ background-image: url("/avatar/life.webp"); }
 .avatar-monopoly-disney		{ background-image: url("/avatar/monopoly-disney.webp"); }
