--- a/components/section.module.scss
+++ b/components/section.module.scss
@@ -2,9 +2,9 @@
 	color: rgba(255,255,255,.9);
 	font-size: 14px;
 	line-height: 1.75;
-	max-width: 900px;
-	margin: 0 auto;
-	padding: 0 2rem 1rem;
+	order: 2;
+	padding: 0 2rem 4rem;
+	width: 100%;
 
 	p {
 		margin-bottom: 1.5rem;
@@ -14,11 +14,14 @@
 		padding-bottom: 5rem;
 	}
 
-	@media (min-width: 650px) {
-		padding: 0 2rem;
+	@media (min-width: 800px) {
+		order: 1;
+		max-width: 500px;
 	}
 }
 
 .wrapper {
-	max-width: 500px;
+	@media (min-width: 800px) {
+		max-width: 500px;
+	}
 }
