Lost Ruins of Arnak

--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -40,6 +40,7 @@ a {
 .bg-dog-park 							{ background-image: url("/hero/dog-park.webp"); }
 .bg-evolution-climate			{ background-image: url("/hero/evolution-climate.png"); }
 .bg-life									{ background-image: url("/hero/life.webp"); }
+.bg-lost-ruins-of-arnak		{ background-image: url("/hero/lost-ruins-of-arnak.webp"); }
 .bg-monopoly-disney				{ background-image: url("/hero/monopoly-disney.jpeg"); }
 .bg-obsession 						{ background-image: url("/hero/obsession.jpeg"); }
 .bg-obsession-upstairs-downstairs	{ background-image: url("/hero/obsession-upstairs-downstairs.webp"); }
@@ -83,6 +84,7 @@ a {
 .avatar-dog-park 					{ background-image: url("/avatar/dog-park.webp"); }
 .avatar-evolution-climate	{ background-image: url("/avatar/evolution-climate.webp"); }
 .avatar-life							{ background-image: url("/avatar/life.webp"); }
+.avatar-lost-ruins-of-arnak	{ background-image: url("/avatar/lost-ruins-of-arnak.webp"); }
 .avatar-monopoly-disney		{ background-image: url("/avatar/monopoly-disney.webp"); }
 .avatar-obsession 				{ background-image: url("/avatar/obsession.webp"); }
 .avatar-obsession-upstairs-downstairs { background-image: url("/avatar/obsession-upstairs-downstairs.webp"); }
