--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -41,6 +41,7 @@ a {
 .bg-evolution-climate			{ background-image: url("/hero/evolution-climate.png"); }
 .bg-life									{ background-image: url("/hero/life.webp"); }
 .bg-lost-ruins-of-arnak		{ background-image: url("/hero/lost-ruins-of-arnak.webp"); }
+.bg-lost-ruins-of-arnak-expedition-leaders		{ background-image: url("/hero/lost-ruins-of-arnak-expedition-leaders.webp"); }
 .bg-monopoly-disney				{ background-image: url("/hero/monopoly-disney.jpeg"); }
 .bg-obsession 						{ background-image: url("/hero/obsession.jpeg"); }
 .bg-obsession-upstairs-downstairs	{ background-image: url("/hero/obsession-upstairs-downstairs.webp"); }
@@ -48,6 +49,7 @@ a {
 .bg-pan-am 								{ background-image: url("/hero/panam.jpeg"); }
 .bg-parks									{ background-image: url("/hero/parks.jpeg"); }
 .bg-parks-nightfall				{ background-image: url("/hero/parks-nightfall.jpeg"); }
+.bg-parks-wildlife				{ background-image: url("/hero/parks-wildlife.webp"); }
 .bg-pictionary						{ background-image: url("/hero/pictionary.jpeg"); }
 .bg-risk									{ background-image: url("/hero/risk.jpeg"); }
 .bg-risk-game-of-thrones	{ background-image: url("/hero/risk-game-of-thrones.jpeg"); }
@@ -62,6 +64,7 @@ a {
 .bg-trickerion-dawn-of-technology { background-image: url("/hero/trickerion-dawn-of-technology.jpeg"); }
 .bg-viticulture 					{ background-image: url("/hero/viticulture.jpeg"); }
 .bg-viticulture-tuscany		{ background-image: url("/hero/viticulture-tuscany.jpeg"); }
+.bg-welcome-to 							{ background-image: url("/hero/welcome-to.jpeg"); }
 .bg-wingspan 							{ background-image: url("/hero/wingspan.jpeg"); }
 .bg-wingspan-oceania			{ background-image: url("/hero/wingspan-oceania.webp"); }
 .bg-wingspan-european			{ background-image: url("/hero/wingspan-european.jpeg"); }
@@ -85,6 +88,7 @@ a {
 .avatar-evolution-climate	{ background-image: url("/avatar/evolution-climate.webp"); }
 .avatar-life							{ background-image: url("/avatar/life.webp"); }
 .avatar-lost-ruins-of-arnak	{ background-image: url("/avatar/lost-ruins-of-arnak.webp"); }
+.avatar-lost-ruins-of-arnak-expedition-leaders	{ background-image: url("/avatar/lost-ruins-of-arnak-expedition-leaders.webp"); }
 .avatar-monopoly-disney		{ background-image: url("/avatar/monopoly-disney.webp"); }
 .avatar-obsession 				{ background-image: url("/avatar/obsession.webp"); }
 .avatar-obsession-upstairs-downstairs { background-image: url("/avatar/obsession-upstairs-downstairs.webp"); }
@@ -92,6 +96,7 @@ a {
 .avatar-pan-am 						{ background-image: url("/avatar/pan-am.webp"); }
 .avatar-parks							{ background-image: url("/avatar/parks.webp"); }
 .avatar-parks-nightfall		{ background-image: url("/avatar/parks-nightfall.webp"); }
+.avatar-parks-wildlife		{ background-image: url("/avatar/parks-wildlife.webp"); }
 .avatar-pictionary				{ background-image: url("/avatar/pictionary.webp"); }
 .avatar-risk							{ background-image: url("/avatar/risk.webp"); }
 .avatar-risk-game-of-thrones { background-image: url("/avatar/risk-game-of-thrones.webp"); }
@@ -106,6 +111,7 @@ a {
 .avatar-trickerion-dawn-of-technology	{ background-image: url("/avatar/trickerion-dawn-of-technology.webp"); }
 .avatar-viticulture 			{ background-image: url("/avatar/viticulture.webp"); }
 .avatar-viticulture-tuscany	{ background-image: url("/avatar/viticulture-tuscany.webp"); }
+.avatar-welcome-to 					{ background-image: url("/avatar/welcome-to.webp"); }
 .avatar-wingspan 					{ background-image: url("/avatar/wingspan.webp"); }
 .avatar-wingspan-oceania	{ background-image: url("/avatar/wingspan-oceania.webp"); }
 .avatar-wingspan-european	{ background-image: url("/avatar/wingspan-european.webp"); }
