--- a/components/button.module.scss
+++ b/components/button.module.scss
@@ -3,31 +3,31 @@
 	border-radius: 5px;
 	color: #000;
 	display: inline-block;
-	font-size: .8rem;
+	font-size: 0.8rem;
 	font-weight: 500;
 	letter-spacing: 1px;
-	margin: 1rem 0 0;
-	padding: .75rem 1rem;
+	margin: 3rem 0 0;
+	padding: 0.75rem 1rem;
 	text-align: center;
 	text-decoration: none;
 	text-transform: uppercase;
-	transition: .2s ease-in-out;
+	transition: 0.2s ease-in-out;
 	width: 100%;
 
 	&:hover {
-		background: rgb(196, 196, 196)
+		background: rgb(196, 196, 196);
 	}
 
 	@media (min-width: 650px) {
 		width: auto;
-		margin-right: .5rem;
+		margin-right: 0.5rem;
 	}
 }
 
 .type-primary {
-	background: #E50914;
+	background: #e50914;
 	color: #fff;
-	
+
 	&:hover {
 		background: #b80912;
 	}
