--- a/components/hero.module.scss
+++ b/components/hero.module.scss
@@ -13,7 +13,12 @@
 
 .overlay {
 	background: transparent;
-	background: linear-gradient(180deg, rgba(32, 32, 32, 0) 0%, rgba(32, 32, 32, 0) 50%, rgba(32, 32, 32, 1) 100%);
+	background: linear-gradient(
+		180deg,
+		rgba(32, 32, 32, 0) 0%,
+		rgba(32, 32, 32, 0) 50%,
+		rgba(32, 32, 32, 1) 100%
+	);
 	height: 500px;
 	width: 100%;
 	margin-top: -500px;
@@ -25,7 +30,7 @@
 	border: 2px solid #fff;
 	border-radius: 50%;
 	margin-bottom: 1.25rem;
-	filter: drop-shadow(5px 5px 9px rgba(0, 0, 0, .5));
+	filter: drop-shadow(5px 5px 9px rgba(0, 0, 0, 0.5));
 	width: 150px;
 	height: 150px;
 
@@ -42,7 +47,7 @@
 	max-width: 900px;
 	margin: 0 auto;
 	margin-top: -150px;
-	padding: 0 2rem 2rem;
+	padding: 0 2rem 3rem;
 
 	@media (min-width: 650px) {
 		flex-direction: row;
@@ -70,7 +75,7 @@
 	text-shadow: 2px 3px 8px rgb(0 0 0 / 50%);
 
 	@media (min-width: 650px) {
-		margin: 0 0 .25rem;
+		margin: 0 0 0.25rem;
 	}
 }
 
