Add refresh message and back button

--- a/components/button.module.scss
+++ b/components/button.module.scss
@@ -2,6 +2,7 @@
 	background: #eee;
 	border-radius: 5px;
 	color: #000;
+	cursor: pointer;
 	display: inline-block;
 	font-size: 0.8rem;
 	font-weight: 500;
