--- a/components/button.module.scss
+++ b/components/button.module.scss
@@ -7,13 +7,17 @@
 	font-size: 0.8rem;
 	font-weight: 500;
 	letter-spacing: 1px;
-	margin: 3rem 0 0;
+	margin: 1rem 0 0;
 	padding: 0.75rem 1rem;
 	text-align: center;
 	text-decoration: none;
 	text-transform: uppercase;
 	transition: 0.2s ease-in-out;
 	width: 100%;
+
+	&:first-of-type {
+		margin-top: 3rem;
+	}
 
 	&:hover {
 		background: rgb(196, 196, 196);
